@@ -1,4 +1,4 @@
-# Run Travis CI for R using https://eddelbuettel.github.io/r-travis/
+# Run CI for R using https://eddelbuettel.github.io/r-ci/
 
 language: c
 sudo: required
@@ -17,9 +17,7 @@ env:
     - _R_CHECK_FORCE_SUGGESTS_="false"
 
 before_install:
-  - curl -OLs https://eddelbuettel.github.io/r-travis/run.sh && chmod 0755 run.sh
-  # add our launchpad repo which has (inter alia) r-cran-gettz
-  #- sudo add-apt-repository -y ppa:edd/r-4.0
+  - curl -OLs https://eddelbuettel.github.io/r-ci/run.sh && chmod 0755 run.sh
   - ./run.sh bootstrap
 
 install:
